# Jamboree-CustomTurns

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: VersionList.sym  config.cmake
lib/headers/: CMakeLists.txt
lib/headers/game/: game_constants.h
src/: main.cpp
syms/game/: bq_BoardWork.sym
